new: Spi classes

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,6 +1,8 @@
 add_library (
     huckleberry SHARED
     util/Time.cpp
+    spi/Bus.cpp
+    spi/Device.cpp
 )
 
 target_link_libraries (huckleberry pthread)
