new: Gpio classes

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -3,6 +3,8 @@ add_library (
     util/Time.cpp
     spi/Bus.cpp
     spi/Device.cpp
+    gpio/Pin.cpp
+    gpio/Chip.cpp
 )
 
 target_link_libraries (huckleberry pthread)
