--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -6,6 +6,9 @@ add_library (
     spi/driver/Mcp3008.cpp
     gpio/Pin.cpp
     gpio/Chip.cpp
+    i2c/Chip.cpp
+    i2c/Device.cpp
+    i2c/SmBus.cpp
 )
 
 target_link_libraries (huckleberry pthread)
