Simple Thermal onewire driver

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -11,6 +11,7 @@ add_library (
     i2c/SmBus.cpp
     i2c/driver/Lcd.cpp
     onewire/Base.cpp
+    onewire/Thermal.cpp
 )
 
 target_link_libraries (huckleberry pthread)
